# rules_tsickle

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.bcr/: metadata.template.json  presubmit.yml
.github/workflows/: release.yaml  release_prep.sh
examples/helloworld/: BUILD.bazel  index.js.golden  index.ts
rules/: defs.bzl  testing.bzl
rules/private/: closure_ts_compile.bzl  closure_ts_library.bzl
tools/tsicklecompiler/: BUILD.bazel  README.md  compilerhost.ts  index.ts  tsicklehost.ts
tools/tsicklefrontend/: BUILD.bazel
