load("@tsickle__0.46.3__links//:defs.bzl", npm_link_tsickle = "npm_link_imported_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config")
load("@npm_tsickle//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(
    name = "node_modules",
    imported_links = [
        npm_link_tsickle,
    ],
)

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    visibility = ["//visibility:public"],
)
