"""rules_tsickle provides bazel rules for transforming ts files to closure compatible js"""

module(
    name = "rules_tsickle",
    version = "0.1.0",
    compatibility_level = 1,
)

# -----------------------------------------------------------------
# bazel_dep(s) - core dependencies, keep sorted alphabetically
# -----------------------------------------------------------------

bazel_dep(name = "aspect_rules_js", version = "2.6.0")
bazel_dep(name = "aspect_rules_ts", version = "3.7.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_nodejs", version = "6.5.0")

# --------------------------------------------------------------------------------
# language js configuration
# --------------------------------------------------------------------------------

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node", dev_dependency = False)
node.toolchain(node_version = "22.14.0")

use_repo(node, "nodejs_toolchains")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = False)

npm.npm_translate_lock(
    name = "npm_tsickle",
    pnpm_lock = "//:pnpm-lock.yaml",
    verify_node_modules_ignored = "//:.bazelignore",
)

use_repo(
    npm,
    "npm_tsickle",
)

npm.npm_import(
    name = "tsickle__0.46.3",
    integrity = "sha512-9PDXxOrtn2AdpvDin6FLGveXVGg8ec3ga8fh8mPR5lz9KtitW6riVgxgagicdfF1rgiBxDeH+5hVowPXhmZbYQ==",
    package = "tsickle",
    root_package = "",
    version = "0.46.3",
)
use_repo(
    npm,
    "tsickle__0.46.3",
    "tsickle__0.46.3__links",
)

# As an example, manually import a package using explicit coordinates.
# Just a demonstration of the syntax de-sugaring.
npm.npm_import(
    name = "acorn__8.4.0",
    bins = {"acorn": "./bin/acorn"},
    integrity = "sha512-ULr0LDaEqQrMFGyQ3bhJkLsbtrQ8QibAseGZeaSUiT/6zb9IvIkomWHJIvgvwad+hinRAgsI51JcWk2yvwyL+w==",
    package = "acorn",
    # Root package where to link the package store
    root_package = "",
    version = "8.4.0",
)
use_repo(
    npm,
    "acorn__8.4.0",
    "acorn__8.4.0__links",
)

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm")
use_repo(pnpm, "pnpm")

# --------------------------------------------------------------------------------
# language ts configuration
# --------------------------------------------------------------------------------

rules_ts_ext = use_extension("@aspect_rules_ts//ts:extensions.bzl", "ext", dev_dependency = False)

rules_ts_ext.deps(ts_version_from = "//:package.json")
use_repo(rules_ts_ext, "npm_typescript")
