load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "tsicklecompiler_lib",
    srcs = [
        "compilerhost.ts",
        "index.ts",
        "tsicklehost.ts",
    ],
    declaration = True,
    transpiler = "tsc",
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/tsickle",
        "//:node_modules/tslib",
        "//:node_modules/typescript",
    ],
)

# Try it out:
# $ bazel run server
js_binary(
    name = "tsicklecompiler",
    data = [":tsicklecompiler_lib"],
    entry_point = "index.js",
    visibility = ["//visibility:public"],
)
