load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "tsicklefrontend",
    srcs = [
        "index.ts",
    ],
    declaration = True,
    transpiler = "tsc",
    tsconfig = "//:tsconfig",
    deps = [
        "//:node_modules/@types/node",
        "//:node_modules/typescript",
    ],
)

# Try it out:
# $ bazel run server
js_binary(
    name = "server",
    data = [
        ":tsicklefrontend",
        # ":package.json",
    ],
    entry_point = "index.js",
)
